--- a/.github/workflows/GitHubPages.yml
+++ b/.github/workflows/GitHubPages.yml
@@ -1,35 +1,54 @@
 name: Deploy MkDocs to GitHub Pages
-
 on:
-  push:
-    branches:
+    # Runs on pushes targeting the default branch
+    push:
+      branches:
       - main
-    paths:
-      - docs/**
+      paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
-    steps:
-      - name: Checkout repository
+  # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+  permissions:
+    contents: read
+    pages: write
+    id-token: write
+
+  # Allow one concurrent deployment
+  concurrency:
+    group: "pages"
+    cancel-in-progress: true
+
+  jobs:
+    # Build job
+    build:
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set up Python environment
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+      - name: Install MKDocs
         run: |
-          pip install mkdocs mkdocs-material
+          pip install mkdocs-material
+          pip install mkdocs-mermaid2-plugin
+          pip install mkdocs-glightbox
+      - name: Build static site
+        run: mkdocs build --strict #needs config to build to _site.
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
 
-      - name: Build MkDocs site
-        run: |
-          mkdocs build
-
+    # Deployment job
+    deploy:
+      environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site
+        id: deployment
+        uses: actions/deploy-pages@v4
