--- a/.github/workflows/GitHubPages.yml
+++ b/.github/workflows/GitHubPages.yml
@@ -1,54 +1,59 @@
 name: Deploy MkDocs to GitHub Pages
+
 on:
-    # Runs on pushes targeting the default branch
-    push:
-      branches:
+  # Runs on pushes targeting the default branch
+  push:
+    branches:
       - main
-      paths:
+    paths:
       - 'docs/**'
       - 'mkdocs.yml'
 
-    # Allows you to run this workflow manually from the Actions tab
-    workflow_dispatch:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
-  # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-  permissions:
-    contents: read
-    pages: write
-    id-token: write
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
-  # Allow one concurrent deployment
-  concurrency:
-    group: "pages"
-    cancel-in-progress: true
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
-  jobs:
-    # Build job
-    build:
-      runs-on: ubuntu-latest
-      steps:
+jobs:
+  # Build job
+  build:
+    runs-on: ubuntu-latest
+    steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Pages
         uses: actions/configure-pages@v2
+
       - name: Install MKDocs
         run: |
           pip install mkdocs-material
           pip install mkdocs-mermaid2-plugin
           pip install mkdocs-glightbox
+
       - name: Build static site
-        run: mkdocs build --strict #needs config to build to _site.
+        run: mkdocs build --strict
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
-    # Deployment job
-    deploy:
-      environment:
-        name: github-pages
-        url: ${{ steps.deployment.outputs.page_url }}
-      runs-on: ubuntu-latest
-      needs: build
-      steps:
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
