--- a/.github/workflows/GitHubPages.yml
+++ b/.github/workflows/GitHubPages.yml
@@ -41,7 +41,7 @@ jobs:
           pip install mkdocs-glightbox
 
       - name: Build static site
-        run: mkdocs build --strict
+        run: mkdocs build 
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
