--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Python Documentation
+site_dir: _site
 docs_dir: docs
 nav:
   - Home: index.md
@@ -46,13 +47,6 @@ nav:
 
 theme:
   name: material
-
-# Configuration options for MkDocs plugins, extra CSS/JS files, etc.
-extra_css:
-  - css/custom.css
-
-extra_javascript:
-  - js/custom.js
 
 # Define plugins for additional functionality
 plugins:
