Update MkDocs GitHub Pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,8 @@
 site_name: Python Documentation
 site_dir: _site
 docs_dir: docs
+repo_url: "https://github.com/manunmathew/python"
+repo_name: "GitHub"
 nav:
   - Home: index.md
   - Basics:
@@ -38,8 +40,9 @@ nav:
       - OS Module vs Native Commands: Modules/os_module_vs_native_commands.md
   - Regular Expressions:
       - Regular Expressions: RegularExpressions/RegEx.md
-  - Python to SQL:
+  - SQL:
       - Python to SQL: PythonToSQL/PythonToSQL.md
+      - SQL: SQL/sql.md
   - File Handling:
       - Python File Handling: FileHandling/PythonFileHandling.md
   - HTML:
@@ -47,7 +50,65 @@ nav:
 
 theme:
   name: material
-
-# Define plugins for additional functionality
-plugins:
-  - search
+  features:
+  - navigation.tabs
+  - navigation.sections
+  - navigation.top
+  - navigation.instant
+  - toc.integrate
+  - search.suggest
+  - search.highlight
+  - content.tabs.links
+  - content.code.annotation
+  - content.code.copy
+  language: en
+  palette:
+  - scheme: default
+    toggle:
+      icon: material/toggle-switch-off-outline
+      name: Switch to dark mode
+    primary: deep-purple
+    accent: purple
+  - scheme: slate
+    toggle:
+      icon: material/toggle-switch
+      name: Switch to light mode
+    primary: deep-purple
+    accent: purple
+  markdown_extensions:
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - toc:
+      permalink: true
+  - tables
+  - meta
+  - codehilite
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: tag:yaml.org,2002:python/name:materialx.emoji.twemoji
+      emoji_generator: tag:yaml.org,2002:python/name:materialx.emoji.to_svg
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences:
+      custom_fences:
+      - name: mermaid
+        class: mermaid
+        format: tag:yaml.org,2002:python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.snippets
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
