--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
 site_name: Python Documentation
 site_dir: _site
 docs_dir: docs
-repo_url: "https://github.com/manunmathew/python"
+site_url: "https://manunmathew.github.io/python"
+repo_url: "https://github.com/manunmathew/python/raw/main"
 repo_name: "GitHub"
 nav:
   - Home: index.md
