--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,9 +52,11 @@ nav:
       - HTML Lists: HTML/html_lists.md
       - HTML Tables: HTML/html_tables.md
       - HTML Forms: HTML/html_form.md
+      - HTML Div: HTML/div.md
   - CSS:
       - CSS Introduction: CSS/css.md
       - CSS Selectors: CSS/Selectors.md
+      - CSS Box Model: CSS/CSSBoxModel.md
 
 theme:
   name: material
