--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,44 +8,44 @@ nav:
   - Home: index.md
   - Python:
     - Basics:
-        - Assignment: Basics/assignment.md
-        - Basics: Basics/basics.md
-        - Conditional Statements: Basics/conditional_statements.md
-        - Formatters: Basics/formatters.md
-        - Python Operators: Basics/python_operators.md
-        - User Input: Basics/userinput.md
+        - Assignment: Python/Basics/assignment.md
+        - Basics: Python/Basics/basics.md
+        - Conditional Statements: Python/Basics/conditional_statements.md
+        - Formatters: Python/Basics/formatters.md
+        - Python Operators: Python/Basics/python_operators.md
+        - User Input: Python/Basics/userinput.md
     - Data Types:
-        - Dictionaries Operations: DataTypes/DictionariesOperations.md
-        - List Operations: DataTypes/ListOperations.md
-        - Set Operations: DataTypes/SetOperations.md
-        - Special Numbers Guide: DataTypes/SpecialNumbersGuide.md
-        - String Formatting: DataTypes/StringFormating.md
-        - String Operations: DataTypes/StringOperations.md
-        - Tuple Operations: DataTypes/TupleOperations.md
+        - Dictionaries Operations: Python/DataTypes/DictionariesOperations.md
+        - List Operations: Python/DataTypes/ListOperations.md
+        - Set Operations: Python/DataTypes/SetOperations.md
+        - Special Numbers Guide: Python/DataTypes/SpecialNumbersGuide.md
+        - String Formatting: Python/DataTypes/StringFormating.md
+        - String Operations: Python/DataTypes/StringOperations.md
+        - Tuple Operations: Python/DataTypes/TupleOperations.md
     - Functions:
-        - Lambda: Functions/Lambda.md
-        - List Comprehension: Functions/ListComprehension.md
-        - Recursion: Functions/Recursion.md
-        - Functions: Functions/functions.md
+        - Lambda: Python/Functions/Lambda.md
+        - List Comprehension: Python/Functions/ListComprehension.md
+        - Recursion: Python/Functions/Recursion.md
+        - Functions: Python/Functions/functions.md
     - OOP Concepts:
-        - Abstraction: OOPsConcepts/Abstraction.md
-        - Encapsulation: OOPsConcepts/Encapsulation.md
-        - Polymorphism: OOPsConcepts/Polymorphism.md
-        - Python OOP Concepts: OOPsConcepts/PythonOOPsConcepts.md
+        - Abstraction: Python/OOPsConcepts/Abstraction.md
+        - Encapsulation: Python/OOPsConcepts/Encapsulation.md
+        - Polymorphism: Python/OOPsConcepts/Polymorphism.md
+        - Python OOP Concepts: Python/OOPsConcepts/PythonOOPsConcepts.md
     - Exceptions Handling:
-        - Assertion Exception: ExceptionsHandling/AssertionException.md
-        - Exception Handling: ExceptionsHandling/ExceptionsHandling.md
+        - Assertion Exception: Python/ExceptionsHandling/AssertionException.md
+        - Exception Handling: Python/ExceptionsHandling/ExceptionsHandling.md
     - Looping Statements:
-        - Looping Statements: LoopingStatements/loopingstatements.md
+        - Looping Statements: Python/LoopingStatements/loopingstatements.md
     - Modules:
-        - Modules Overview: Modules/Modules.md
-        - OS Module vs Native Commands: Modules/os_module_vs_native_commands.md
+        - Modules Overview: Python/Modules/Modules.md
+        - OS Module vs Native Commands: Python/Modules/os_module_vs_native_commands.md
     - Regular Expressions:
-        - Regular Expressions: RegularExpressions/RegEx.md
+        - Regular Expressions: Python/RegularExpressions/RegEx.md
     - File Handling:
-        - Python File Handling: FileHandling/PythonFileHandling.md
+        - Python File Handling: Python/FileHandling/PythonFileHandling.md
   - SQL:
-      - Python to SQL: PythonToSQL/PythonToSQL.md
+      - Python to SQL: SQL/PythonToSQL/PythonToSQL.md
       - SQL: SQL/sql.md
   - HTML:
       - HTML Introduction: HTML/overview.md
